--- a/Output/results.ini
+++ b/Output/results.ini
@@ -1,25 +1,34 @@
 [Date]
-Date = 2015-09-09 22:34:34
+Date = 2015-09-09 23:24:41
 
 [Analysis Parameters]
 HAS_BLUR = 1
-ACTIVE_CHANNEL = 2
-IMAGE = im0296.jpg
+ACTIVE_CHANNEL = -1
+IMAGE = im0211.jpg
 MIN_POINTS_IN_CLUSTER = 1
 BKS = 6
 SIZE_OF_ROI = 120
 FD Type = MSER
 
 [Channel Keypoints]
-Channel 2 = 23
+Channel 0 = 3
+Channel 1 = 7
+Channel 2 = 17
 
 [Clustering Info]
-Rejected Clusters = 5
+Rejected Clusters = 8
 Confidence = High
 
 [Cluster 1]
-NumPoints = 13
-X = 649
-Y = 214
-X STD = 16.3163982567
-Y STD = 23.6670694746
+NumPoints = 12
+X = 1626
+Y = 601
+X STD = 3.03108891325
+Y STD = 2.21578930005
+
+[Cluster 2]
+NumPoints = 3
+X = 1777
+Y = 537
+X STD = 0.471404520791
+Y STD = 17.9133717901
