--- a/Output/results.ini
+++ b/Output/results.ini
@@ -1,34 +1,47 @@
 [Date]
-Date = 2015-09-09 23:24:41
+Date Analyzed = 2015-09-21 00:04:21
 
 [Analysis Parameters]
 HAS_BLUR = 1
-ACTIVE_CHANNEL = -1
-IMAGE = im0211.jpg
-MIN_POINTS_IN_CLUSTER = 1
+MAX_AREA = 38000
+ACTIVE_CHANNEL = [1, 2]
+MIN_POINTS_IN_CLUSTER = 5
 BKS = 6
-SIZE_OF_ROI = 120
+MIN_AREA = 3500
+IMAGE = IMG_0520.jpg
+SIZE_OF_ROI = 300
+USE_TREE_FILTER = 1
 FD Type = MSER
 
 [Channel Keypoints]
-Channel 0 = 3
-Channel 1 = 7
-Channel 2 = 17
+Channel 0 = 93
+Channel 3 = 4
+Channel 5 = 6
 
-[Clustering Info]
-Rejected Clusters = 8
-Confidence = High
+[Crop Info]
+Number of Crops = 5
 
-[Cluster 1]
-NumPoints = 12
-X = 1626
-Y = 601
-X STD = 3.03108891325
-Y STD = 2.21578930005
+[Crop 1]
+Image Name = chan[1, 2]_roi0.jpg
+X = 1060
+Y = 992
 
-[Cluster 2]
-NumPoints = 3
-X = 1777
-Y = 537
-X STD = 0.471404520791
-Y STD = 17.9133717901
+[Crop 2]
+Image Name = chan[1, 2]_roi1.jpg
+X = 201
+Y = 1767
+
+[Crop 3]
+Image Name = chan[1, 2]_roi2.jpg
+X = 2018
+Y = 486
+
+[Crop 4]
+Image Name = chan[1, 2]_roi3.jpg
+X = 230
+Y = 891
+
+[Crop 5]
+Image Name = chan[1, 2]_roi4.jpg
+X = 2885
+Y = 1708
